<resources>
    <string name="app_name">Apartment search</string>
    <string name="city">Город</string>
    <string name="state">Область</string>
    <string name="price">Цена</string>
    <string name="rooms">Комнат</string>
    <string name="area">Площадь, м²</string>
    <string name="kitchen">Кухня, м²</string>
    <string name="floor">Этаж</string>
    <string name="to">до</string>
    <string name="find">Поиск</string>
    <string name="zero">0</string>
    <string name="not_found">Ничего не найдено</string>
</resources>