<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:orientation="vertical"
    tools:context=".ui.main.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:text="@string/state"
            android:textColor="@color/black"
            android:textSize="8pt" />

        <Spinner
            android:id="@+id/states"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black"
            android:textSize="8pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:text="@string/city"
            android:textColor="@color/black"
            android:textSize="8pt" />

        <Spinner
            android:id="@+id/spin_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black"
            android:textSize="8pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="8pt" />

        <EditText
            android:text="@string/zero"
            android:id="@+id/et_price_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="number"
            android:maxLength="8"
            android:textColor="@color/black"
            android:textSize="8pt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textColor="@color/black"
            android:textSize="8pt" />

        <EditText
            android:text="@string/zero"
            android:id="@+id/et_price_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="number"
            android:maxLength="8"
            android:textColor="@color/black"
            android:textSize="8pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:text="@string/rooms"
            android:textColor="@color/black"
            android:textSize="8pt" />

        <Spinner
            android:id="@+id/spin_rooms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textColor="@color/black"
            android:textSize="8pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/area"
            android:textColor="@color/black"
            android:textSize="8pt" />

        <EditText
            android:text="@string/zero"
            android:id="@+id/et_area_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="number"
            android:maxLength="8"
            android:textColor="@color/black"
            android:textSize="8pt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textColor="@color/black"
            android:textSize="8pt" />

        <EditText
            android:text="@string/zero"
            android:id="@+id/et_area_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="number"
            android:maxLength="8"
            android:textColor="@color/black"
            android:textSize="8pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/kitchen"
            android:textColor="@color/black"
            android:textSize="8pt" />

        <EditText
            android:text="@string/zero"
            android:id="@+id/et_kitchen_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/black"
            android:textSize="8pt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textColor="@color/black"
            android:textSize="8pt" />

        <EditText
            android:text="@string/zero"
            android:id="@+id/et_kitchen_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/black"
            android:textSize="8pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/floor"
            android:textColor="@color/black"
            android:textSize="8pt" />

        <EditText
            android:text="@string/zero"
            android:id="@+id/et_floor_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/black"
            android:textSize="8pt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textColor="@color/black"
            android:textSize="8pt" />

        <EditText
            android:text="@string/zero"
            android:id="@+id/et_floor_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="@color/black"
            android:textSize="8pt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find"
            android:textColor="@color/black"
            android:textSize="8pt" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="8pt"
                android:autoLink="web"
                android:linksClickable="true" />
        </ScrollView>
    </LinearLayout>
</LinearLayout>